mobile spacing fixed

--- a/src/styles.css
+++ b/src/styles.css
@@ -50,12 +50,9 @@ h3.ui.center.aligned.header {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
 }
-.content h3 {
-    padding: 5px 12px;
-    background-color: black;
-}
+
 .nomargin {
     margin: 0 !important;
 
@@ -159,12 +156,6 @@ div img {
     .sizingMT {
     font-size: 2em !important;
 }
-    h3 {
-        font-size: 1.3rem !important;
-        padding: 0px !important;
-        background-color: black;
-        opacity: .9;
-    }
 
     .time-col {
         font-size: 1.5rem;
